recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  def square(){
    avance()
    droite()
    avance()
    droite()
    avance()
    droite()
    avance()
    droite()
  }
  for (i<- 0 to 3) {
    square()
    droite()
  }
}